--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -11,7 +11,7 @@
       %h1.header-title
         Welcome
       = link_to new_board_path, class: 'header-link add-link', remote: true do
-        = inline_svg_tag('icons/add', class: 'add-icon icon')
+        = inline_svg_tag('icons/add.svg', class: 'add-icon icon')
 
   %section.container
     .row
