--- a/app/views/lists/_show.html.haml
+++ b/app/views/lists/_show.html.haml
@@ -2,9 +2,9 @@
   %h3.flashy= list.title
 %section.container.list-section{ id: "list-#{list.id}" }
   = link_to new_task_path(list: list, board: @home_board), class: 'icon-link add-link', remote: true do
-    = inline_svg_tag('icons/add', class: 'add-icon icon')
+    = inline_svg_tag('icons/add.svg', class: 'add-icon icon')
   = link_to new_lnk_path(list: list, board: @home_board), class: 'icon-link add-link new-lnk', remote: true do
-    = inline_svg_tag('icons/hash', class: 'lnk-icon icon')
+    = inline_svg_tag('icons/hash.svg', class: 'lnk-icon icon')
   .row
     .col-md-9.col-lg-10.col-12
       %ul.tasklist
@@ -15,4 +15,4 @@
         - list.lnks.each do |lnk|
           = link_to lnk.href, target: '_blank', class: 'alink' do
             = lnk.text
-            = inline_svg_tag('icons/hash', class: 'lnk-decoration')
+            = inline_svg_tag('icons/hash.svg', class: 'lnk-decoration')
