--- a/app/views/tasks/_listed_task.html.haml
+++ b/app/views/tasks/_listed_task.html.haml
@@ -1,4 +1,4 @@
 %li{ class: "#{task.tomorrow_class} prio-#{task.nbr_prio}", id: "task-#{task.id}" }
   = task.text
   = link_to complete_task_path(task.id), method: :patch, remote: true, class: 'icon-link check' do
-    = inline_svg_tag('icons/check', class: 'icon icon-check')
+    = inline_svg_tag('icons/check.svg', class: 'icon icon-check')
