omnibutton + login mobile

--- a/app/views/parts/_omnibutton.haml
+++ b/app/views/parts/_omnibutton.haml
@@ -1,4 +1,4 @@
-.omnibutton.text-center
+#omnibutton.text-center
   = link_to new_task_path(board: @home_board), remote: true do
     = inline_svg_tag('icons/add.svg')
   .even-more
