--- a/app/assets/stylesheets/general/omnibutton.sass
+++ b/app/assets/stylesheets/general/omnibutton.sass
@@ -1,4 +1,4 @@
-.omnibutton
+#omnibutton
   position: fixed
   bottom: 24px
   right: 48px
@@ -7,7 +7,7 @@
   width: 64px
   background-color: BurlyWood
   border: 4px solid Peru
-  &:hover
+  &.active
     background-color: darken(BurlyWood, 10%)
     .even-more
       right: 4px
@@ -33,10 +33,12 @@
       &:hover
         background-color: darken(BurlyWood, 10%)
 
-
   svg
     height: 65%
     width: 65%
     margin-top: 17%
     path
       fill: AntiqueWhite
+
+  @media only screen and (max-width: $MINImax)
+    right: 24px
