--- a/app/assets/stylesheets/general/list_section.sass
+++ b/app/assets/stylesheets/general/list_section.sass
@@ -9,6 +9,10 @@
     li
       margin: 4px 0
       padding: 2px 8px
+      transition: transform .4s ease, margin-bottom .4s ease
+      &.fadeout
+        transform: scale(0)
+        margin-bottom: -32px
   .boardlist
     li
       background-color: darken(BurlyWood, 10%)
@@ -17,11 +21,7 @@
       background-color: BurlyWood
   .tasklist
     li
-      background-color: darken(BurlyWood, 10%)
-      transition: transform .4s ease, margin-bottom .4s ease
-      &.fadeout
-        transform: scale(0)
-        margin-bottom: -32px
+      background-color: darken(BurlyWood, 10)
     .icon-link.check
       position: absolute
       right: 20px
