style setup improvement

--- a/app/assets/stylesheets/general/general.sass
+++ b/app/assets/stylesheets/general/general.sass
@@ -1,9 +1,9 @@
 body
-  background: AntiqueWhite
+  background: $light
   padding-bottom: 120px
 
 section
-  background: BurlyWood
+  background: $secondary
   position: relative
 
 a:hover
@@ -16,12 +16,12 @@ button, button:focus, .btn:focus
 h1, h2, h3, h4
   font-weight: 600
   text-transform: uppercase
-  color: Peru
+  color: $primary
 
 p, ul, ol, a
 
 span.white
-  color: AntiqueWhite
+  color: $light
 
 @media only screen and (max-width: $MINImax)
   section
