--- a/app/assets/stylesheets/general/header.sass
+++ b/app/assets/stylesheets/general/header.sass
@@ -1,6 +1,6 @@
 .header
   position: relative
-  background-color: Peru
+  background-color: $primary
 
   .header-logo-link svg
     position: relative
@@ -8,7 +8,7 @@
     width: 84px
     z-index: 15
     path
-      fill: AntiqueWhite
+      fill: $light
 
   .header-links
     position: absolute
@@ -27,7 +27,7 @@
     left: 50%
     margin-top: 52px
     margin-left: 64px
-    color: AntiqueWhite
+    color: $light
   .add-link
     position: absolute
     right: 10px
