--- a/app/assets/stylesheets/general/help.sass
+++ b/app/assets/stylesheets/general/help.sass
@@ -1,5 +1,5 @@
 .help
-  background-color: AntiqueWhite
+  background-color: $light
   display: none
 .show-help .help
   display: block
@@ -13,7 +13,7 @@
     height: 20px
     width: 20px
     path
-      fill: Peru
+      fill: $primary
 
 .quasi-modal
   .help
@@ -22,7 +22,7 @@
       display: block
     span.white
       font-weight: 600
-      color: Peru
+      color: $primary
 
 @media only screen and (max-width: $MINImax)
   .help
